; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_test_config_stress__foreach_refreshes_snapshot.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_test_config_stress__foreach_refreshes_snapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"./cfg\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"key.value\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@foreach_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_stress__foreach_refreshes_snapshot() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i8* null, i8** %3, align 8
  %4 = call i32 @git_config_open_ondisk(i32** %1, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_config_set_string(i32* %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_config_snapshot(i32** %2, i32* %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @foreach_cb, align 4
  %14 = call i32 @git_config_foreach_match(i32* %12, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %13, i8** %3)
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @cl_assert_equal_s(i8* %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @git_config_free(i32* %18)
  %20 = load i32*, i32** %1, align 8
  %21 = call i32 @git_config_free(i32* %20)
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @git__free(i8* %22)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i8*) #1

declare dso_local i32 @git_config_set_string(i32*, i8*, i8*) #1

declare dso_local i32 @git_config_snapshot(i32**, i32*) #1

declare dso_local i32 @git_config_foreach_match(i32*, i8*, i32, i8**) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i8*) #1

declare dso_local i32 @git_config_free(i32*) #1

declare dso_local i32 @git__free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
